Bug 136247 - The atomic number appears in the wrong place in the "Overview"
Summary: The atomic number appears in the wrong place in the "Overview"
Status: RESOLVED FIXED
Alias: None
Product: kalzium
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Kalzium Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-10-24 20:02 UTC by Kevin Range
Modified: 2007-12-02 12:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of the current overview window for uranium (45.59 KB, image/png)
2006-11-09 17:14 UTC, Kevin Range
Details
Correct symbol for U-235 ion (8.21 KB, image/png)
2006-11-09 17:15 UTC, Kevin Range
Details
Mockup of fixed overview (31.12 KB, image/png)
2006-11-09 17:16 UTC, Kevin Range
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Range 2006-10-24 20:02:35 UTC
Version:           1.4.5 (using KDE 3.5.4 Level "a" , unofficial build of SUSE )
Compiler:          gcc version 3.3.5 20050117 (prerelease) (SUSE Linux)
OS:                Linux (x86_64) release 2.6.12.5-smp

The atomic number is shown superscripted to the left of the element symbol in the overview.  This place is normally reserved for the mass number of a particular isotope and may confuse people.
Comment 1 cniehaus 2006-11-05 11:20:08 UTC
Since when is there a "standardlayout" for a periodic table? I have 10 tables 
with 10 layouts, basically. Or is there really a ISO-Norm or something like 
that?
Comment 2 Kevin Range 2006-11-09 17:12:58 UTC
There is no standard layout for a periodic table, that is true, but that is not what I am talking about.  The "Overview" window currently has the atomic number in the upper left hand side of the element (see U_current.png attached here).  However, when we write down an atom, the upper left corner is reserved for the atomic mass number, the lower left for the atomic number (often left out as redundant), the upper right for the charge, and the lower right for the number of atoms in the species if we are talking about a compound.  Thus, if I wanted to write down uranium 235 ion with a plus six charge it would look like the attached picture U_all.png.

So all I am asking is to move the atomic number in the "Overview" window down a smidge so it looks like U_fixed.png   
Comment 3 Kevin Range 2006-11-09 17:14:08 UTC
Created attachment 18478 [details]
Screenshot of the current overview window for uranium
Comment 4 Kevin Range 2006-11-09 17:15:56 UTC
Created attachment 18479 [details]
Correct symbol for U-235 ion
Comment 5 Kevin Range 2006-11-09 17:16:47 UTC
Created attachment 18480 [details]
Mockup of fixed overview
Comment 6 Kevin Range 2007-06-09 21:05:15 UTC
Still present in kalzium 1.4.6.
Comment 7 Kevin Range 2007-10-30 14:01:22 UTC
Still present in Kalzium 1.9.91.

Here is a link to the IUPAC recommendation regarding this: http://www.iupac.org/reports/provisional/abstract04/RB-prs310804/Chap3-3.04.pdf

Specifically, on page 3 of that document states:

The mass, charge and atomic number of a nuclide are indicated by means of three indexes (subscripts and superscripts) placed around the symbol. The positions are occupied as follows:

left upper index  mass number
left lower index  atomic number
right upper index charge

Currently, kalzium is showing the atomic number where the mass number
should be.
Comment 8 cniehaus 2007-12-02 12:37:51 UTC
SVN commit 743926 by cniehaus:

The postion of the atomic number is defined by the IUPAC. Lets use this.

You find a reference to their format stuff in the bugreport.

BUG: 136247


 M  +1 -2      detailedgraphicaloverview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=743926