The postion of the atomic number is defined by the IUPAC. Lets use this.

You find a reference to their format stuff in the bugreport.

BUG: 136247

svn path=/trunk/KDE/kdeedu/kalzium/; revision=743926